# hybrid-chess

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  TODO  gen_pieces_css.rb  gen_pieces_html.rb  index.css  index.html  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml
crate/src/: ai.rs  interface.rs  lib.rs
js/: index.js
src/: ai.rs  interface.rs  lib.rs
www/: index.css  index.html  index.js  package-lock.json
