[package]
name = "hybrid-chess"
version = "0.1.0"
authors = ["Michael Fairley <michaelfairley@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "*"
wasm-bindgen = "*"
console_error_panic_hook = { version = "*", optional = true }
wee_alloc = { version = "*", optional = true }
matches = "*"
rand = { version = "*", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "*"
features = [
  "CssStyleDeclaration",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlCollection",
  "HtmlElement",
  "Node",
  "Window",
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
