[package]
name = "hybrid-chess"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
matches = "*"
rand = { version = "*", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "Node",
  "Window",
  "console",
]

[features]
default-features = ["console_error_panic_hook"]
